# llama-tldr

./: LLMTraining.ipynb  README (1).md  README.md  pyproject.toml  requirements.txt
llama-tdlr/inference/: vllm.py
llama-tdlr/training/ft-lora/: train.py
llama-tdlr/training/instruction-ft/: train.py
llama-tdlr/training/pretraining/: deepspeed.yaml  fsdp.yaml  pretraining.py  train_tokenizer.py
llama-tdlr/training/qlora/: README.md  llama_patch.py  merge_qlora.py  train.py
